Fix styles issues with element gap on Safari

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -34,7 +34,7 @@ footer {
             a:visited:hover {
                 // text-decoration: underline;
                 color: rgb(250, 250, 250);
-                color: variables.$accent-color;
+                // color: variables.$accent-color;
             }
         }
     }
