--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,4 +1,5 @@
 @use '../utils/variables';
+@use '../utils/mixins';
 
 header {
     display: flex;
@@ -7,6 +8,8 @@ header {
     justify-content: center;
     height: calc(100vh);
     color: variables.$text-color-rev;
+    width: 100vw;
+    overflow-x: hidden;
 
     .headerBackground {
         position: absolute;
@@ -20,6 +23,9 @@ header {
         align-items: flex-end;
 
         overflow-x: hidden;
+        // @include mixins.tablet {
+        //     width: 101vw;
+        // }
     }
 
     .headerBackground::after {
@@ -30,11 +36,10 @@ header {
 
         border-top: 100px solid transparent;
         border-right: calc(100vw - 400px) solid variables.$body-color;
-        @media screen and (max-width: 450px) {
+        @include mixins.mobile {
             border-right: calc(100vw - 200px) solid variables.$body-color;
         }
     }
-
     .headerBackground::before {
         content: '';
         position: absolute;
@@ -45,7 +50,7 @@ header {
         border-left: calc(100vw - 20px) solid variables.$body-color;
 
         z-index: 1;
-        @media screen and (max-width: 450px) {
+        @include mixins.mobile {
             border-right: calc(100vw - 200px) solid variables.$body-color;
         }
     }
@@ -59,7 +64,7 @@ header {
         margin-top: -50px;
         font-size: 3rem;
         color: rgba($color: #fff, $alpha: 0.92);
-        @media screen and (max-width: 450px) {
+        @include mixins.mobile {
             font-size: 2.5rem;
         }
     }
@@ -72,8 +77,7 @@ header {
         background-clip: text;
         -webkit-text-fill-color: transparent;
 
-        // line-height: 1.4;
-        @media screen and (max-width: 450px) {
+        @include mixins.mobile {
             font-size: 7rem;
         }
     }
@@ -83,7 +87,7 @@ header {
 
         color: variables.$alpha-color-rev;
 
-        @media screen and (max-width: 450px) {
+        @include mixins.mobile {
             font-size: 1.5rem;
         }
     }
