--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -3,9 +3,10 @@
 
 main {
     max-width: variables.$tablet;
+    // color: variables.$accent-color;
 
     margin-top: 5rem;
-    padding: 0 2rem;
+    padding: 0 1rem;
 
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
         Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -27,18 +28,6 @@ main {
             flex-direction: row;
             align-items: center;
             gap: 1rem;
-
-            img {
-                width: 250px;
-                height: 250px;
-                order: 1;
-                border-right: 5px solid variables.$accent-color;
-                border-bottom: 5px solid variables.$accent-color;
-                border-radius: 1rem;
-            }
-            @include mixins.tablet {
-                flex-direction: column-reverse;
-            }
         }
         p,
         h2 {
